<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    tools:context=".AddModify">

  <LinearLayout
      android:layout_marginTop="40dp"
      android:layout_marginBottom="40dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Edit Details"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"
          android:gravity="center"
          android:layout_margin="14dp"
          android:padding="10dp"/>

      <EditText
          android:id="@+id/nameET"
          android:hint="@string/contact_name"
          style="@style/TextThemeCustom" />

      <EditText
          android:id="@+id/mailET"
          android:hint="@string/mail_id"
          android:inputType="textEmailAddress"
          style="@style/TextThemeCustom" />
      <EditText
          android:id="@+id/phoneET"
          android:inputType="phone"
          android:hint="@string/contact_phone"
          style="@style/TextThemeCustom" />
      <EditText
          android:id="@+id/addressET"
          android:hint="@string/address"
          android:inputType="textLongMessage"
          style="@style/TextThemeCustom" />

    <LinearLayout
        style="@style/layoutLinearStyle"
        android:layout_marginBottom="6dp">

        <TextView
            style="@style/headings"
            android:text="@string/department"
            android:layout_weight="0.4"/>
        <Spinner
            android:id="@+id/cardDetailsDepartment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"/>
    </LinearLayout>
     <LinearLayout
          style="@style/layoutLinearStyle">

          <TextView
              style="@style/headings"
              android:text="@string/gender"
              android:layout_weight="0.25"/>
          <RadioGroup
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <RadioButton
                  android:id="@+id/male"
                  android:text="@string/male"
                  style="@style/radioCust" />
              <RadioButton
                  android:id="@+id/female"
                  style="@style/radioCust"
                  android:text="@string/female" />
              <RadioButton
                  android:id="@+id/other"
                  style="@style/radioCust"
                  android:text="@string/other" />
          </RadioGroup>


      </LinearLayout>

      <LinearLayout style="@style/layoutLinearStyle">


          <TextView
              style="@style/headings"
              android:text="Languages"
              android:layout_weight="0.25"/>

              <CheckBox
                  android:id="@+id/langTelugu"
                  android:text="Telugu"
                  style="@style/checkCust" />
              <CheckBox
                  android:id="@+id/langHindi"
                  style="@style/checkCust"
                  android:text="Hindi" />
              <CheckBox
                  android:id="@+id/langEnglish"
                  style="@style/checkCust"
                  android:text="English" />


      </LinearLayout>

      <LinearLayout
          style="@style/layoutLinearStyle"
          android:layout_marginBottom="14dp"
          android:gravity="end">

          <com.google.android.material.button.MaterialButton
              android:id="@+id/save"
              style="@style/Widget.MaterialComponents.Button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:onClick="save"
              android:text="SAVE" />

          <com.google.android.material.button.MaterialButton
              android:id="@+id/cancel"
              style="@style/Widget.MaterialComponents.Button.OutlinedButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:onClick="cancel"
              android:text="cancel" />
      </LinearLayout>


  </LinearLayout>


</ScrollView>
